add privacy policy and term condition

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^2.3.2
   carousel_slider: ^4.2.1
+  webview_flutter: ^4.2.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/animations/
+    - assets/html/
+    - assets/html/privacy_policy_files/
+    - assets/html/term_and_condition_files/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
