--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   carousel_slider: ^4.2.1
+  cloud_firestore: ^4.7.1
   cupertino_icons: ^1.0.2
   dio: ^5.1.2
   file_picker: ^5.3.0
